--- a/NewArrivals.html
+++ b/NewArrivals.html
@@ -101,7 +101,12 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a class="btn btn-primary" href="">Add to Basket</a>
+				<a id="basketAddWheelbarrow" class="btn btn-primary" href="">Add to Basket</a>
+					<script>
+						document.getElementById("basketAddWheelbarrow").addEventListener("click", function basketFunction(){
+							localStorage.setItem("bWheelbarrowTrue", "true");
+						});
+					</script>
 				<a id="wishlistAddWheelbarrow" class="btn btn-primary" href="">Add to Wishlist</a>
 					<script>
 						document.getElementById("wishlistAddWheelbarrow").addEventListener("click", function wishlistFunction(){
@@ -124,9 +129,12 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a class="btn btn-primary" href="">
-					Add to Basket
-				</a>
+				<a id="basketAddTable" class="btn btn-primary" href="">Add to Basket</a>
+					<script>
+						document.getElementById("basketAddTable").addEventListener("click", function basketFunction(){
+							localStorage.setItem("bTableTrue", "true");
+						});
+					</script>
 				<a id="wishlistAddTable" class="btn btn-primary" href="">Add to Wishlist</a>
 					<script>
 						document.getElementById("wishlistAddTable").addEventListener("click", function wishlistFunction(){
