--- a/GardenFurniture.html
+++ b/GardenFurniture.html
@@ -4,9 +4,9 @@
 		<title>NB Gardens - Garden Furniture</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="wishlist.css">
+		<link rel="stylesheet" type="text/css" href="css/wishlist.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-		<script src="app.js"></script>
+		<script src="js/app.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 
