--- a/Departments.html
+++ b/Departments.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/search.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 
@@ -24,12 +25,7 @@
 			<div class="col-sm-5">
                 <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
-					<input type="submit" value="Search" onclick="MyFunction()">
-					<script>
-						function MyFunction(){
-							sessionStorage.setItem("searchValue", document.getElementById("search-terms").value);
-						};
-					</script>
+					<input type="submit" value="Search" onclick="setSearch()">
 				</form>
 			</div>
 			<!-- JQuery Drop Down Login and other Nav parts -->
