--- a/GardenTools.html
+++ b/GardenTools.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="css/wishlist.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/search.js"></script>
+		<script src="js/addWheelbarrow.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 
@@ -21,14 +23,10 @@
 			<div class="col-sm-5">
                 <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
-					<input type="submit" value="Search" onclick="MyFunction()">
-					<script>
-						function MyFunction(){
-							sessionStorage.setItem("searchValue", document.getElementById("search-terms").value);
-						};
-					</script>
+					<input type="submit" value="Search" onclick="setSearch()">
 				</form>
 			</div>
+			
 			<!-- JQuery Drop Down Login and other Nav parts -->
 			<nav class="col-sm-4">
 			<ul>
@@ -75,18 +73,8 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a id="basketAddWheelbarrow" class="btn btn-primary" href="">Add to Basket</a>
-					<script>
-						document.getElementById("basketAddWheelbarrow").addEventListener("click", function basketFunction(){
-							localStorage.setItem("bWheelbarrowTrue", "true");
-						});
-					</script>
-				<a id="wishlistAddWheelbarrow" class="btn btn-primary" href="">Add to Wishlist</a>
-					<script>
-						document.getElementById("wishlistAddWheelbarrow").addEventListener("click", function wishlistFunction(){
-							localStorage.setItem("wWheelbarrowTrue", "true");
-						});
-					</script>
+				<a id="basketAddWheelbarrow" class="btn btn-primary" onclick="wBasket()">Add to Basket</a>
+				<a id="wishlistAddWheelbarrow" class="btn btn-primary" onclick="wWishlist()">Add to Wishlist</a>
 			</div>
 		</div>
 		
