--- a/GardenTools.html
+++ b/GardenTools.html
@@ -8,7 +8,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/search.js"></script>
-		<script src="js/addWheelbarrow.js"></script>
+		<script src="js/add.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 
@@ -73,8 +73,8 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a id="basketAddWheelbarrow" class="btn btn-primary" onclick="wBasket()">Add to Basket</a>
-				<a id="wishlistAddWheelbarrow" class="btn btn-primary" onclick="wWishlist()">Add to Wishlist</a>
+				<a id="basketAddWheelbarrow" class="btn btn-primary" onclick="add('bWheelbarrow','true')">Add to Basket</a>
+				<a id="wishlistAddWheelbarrow" class="btn btn-primary" onclick="add('wWheelbarrow','true')">Add to Wishlist</a>
 			</div>
 		</div>
 		
