--- a/GnomesAndDecoration.html
+++ b/GnomesAndDecoration.html
@@ -8,6 +8,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/search.js"></script>
+		<script src="js/add.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 
@@ -74,18 +75,8 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a id="basketAddGnome" class="btn btn-primary" href="#">Add to Basket</a>
-					<script>
-						document.getElementById("basketAddGnome").addEventListener("click", function basketFunction(){
-							localStorage.setItem("bGnomeTrue", "true");
-						});
-					</script>
-				<a id="wishlistAddGnome" class="btn btn-primary" href="">Add to Wishlist</a>
-					<script>
-						document.getElementById("wishlistAddGnome").addEventListener("click", function wishlistFunction(){
-							localStorage.setItem("wGnomeTrue", "true");
-						});
-					</script>
+				<a id="basketAddGnome" class="btn btn-primary" onclick="add('bGnome', 'true')">Add to Basket</a>
+				<a id="wishlistAddGnome" class="btn btn-primary" onclick="add('wGnome', 'true')">Add to Wishlist</a>
 			</div>
 		</div>
 		
