testing Registration JavaScript changes

--- a/Departments.html
+++ b/Departments.html
@@ -15,8 +15,6 @@
 	
 	<!-- Main Body -->
 	
-
-
 	<header class="container">
 		<div class="row">
 		<a href="NB Gardens.html">
@@ -31,7 +29,7 @@
 			<!-- JQuery Drop Down Login and other Nav parts -->
 			<nav class="col-sm-4">
 			<ul>
-				<li><a class="btn btn-primary" href="wishlist.html">Wishlist</a></li>
+				<li><a class="btn btn-primary" href="Wishlist.html">Wishlist</a></li>
 				<li><a class="btn btn-primary" href="Basket.html">Basket</a></li>
 				<li id="login">
 				  <a id="login-trigger" href="#">
